<resources>
    <string name="app_name">ATC-Simulator</string>

    <string name="title_activity_game">GameActivity</string>
    <string name="jouerButton">Jouer</string>
    <string name="tutorialButton">Tutoriel</string>
    <string name="optionsButton">Options</string>
    <string name="creditsButton">Credits</string>
    <string name="creditText">Ce jeu a été réalisé par Clément Fassot, élève à l\'IUT informatique de Laval.
                                Il a été réalisé dans le cadre d\'un projet universitaire.\n
                                Les sources de ce jeu sont en ligne à l\'adresse : github.com/Ked57/ATC-Simulator</string>

    <string name="options_difficulty_easy">Facile</string>
    <string name="options_difficulty_normal">Normal</string>
    <string name="options_difficulty_hard">Difficile</string>
    <string name="options_difficulty_error">Erreur</string>
    <string name="options_reset_save">Réinitialiser la sauvegarde</string>
    <string name="options_reset_save_toast_text">Sauvegarde supprimée</string>

    <string name="game_over_text">Une collision a eu lieu ! Vous allez être redirigé vers le menu principal</string>
    <string name="game_over_title">Game Over</string>
    <string name="game_over_ok">Ok</string>

    <string name="backButtonText">Retour</string>

    <string name="sentence_taxi_cleared">taxi </string>
    <string name="sentence_taxi_holdshort">au point d\'arrêt de la piste 27 </string>
    <string name="sentence_taxi_parking">au parking </string>
    <string name="sentence_taxi_via">via </string>
    <string name="sentence_taxi_alpha">alpha </string>
    <string name="sentence_taxi_bravo">bravo </string>
    <string name="sentence_taxi_charlie">charlie </string>

    <string name="sentence_takeoff_cleared">autorisé au décollage </string>
    <string name="sentence_takeoff_rw27">piste 27</string>


    <string name="sentence_landing_cleared">autorisé à l\'atterissage </string>
    <string name="sentence_landing_rw27">piste 27</string>

    <string name="sentence_rw27">piste 27 </string>

    <string name="sentence_stop">stop !</string>
    <string name="sentence_continue">continue</string>
</resources>
